# mpclipboard

./: .gitignore  Cargo.toml  Justfile  README.md
.github/actions/release/: action.yml
.github/workflows/: build-generic-client.yml.bak  ci.yml  release-linux.yml  release-macos.yml  release-server.yml  release.yml  test.yml
android/: .gitignore  Justfile  README.md  build.gradle.kts  consumer-rules.pro  settings.gradle.kts
android/cli/: Justfile  build.gradle.kts
android/cli/src/main/kotlin/dev/mpclipboard/android/cli/: Main.kt
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: CMakeLists.txt  mpclipboard_android_jni.c
android/src/main/kotlin/dev/mpclipboard/android/: Connectivity.kt  Ffi.kt  MPClipboardAndroidSync.kt  MPClipboardConfig.kt  MPClipboardStore.kt  NativeOutput.kt  Output.kt
android/src/main/kotlin/dev/mpclipboard/android/ui/: MPClipboardSettingsScreen.kt
android/src/main/kotlin/dev/mpclipboard/android/widget/: MPClipboardWidgetProvider.kt
android/src/main/res/drawable/: mpclipboard_widget_background.xml  mpclipboard_widget_connecting.xml  mpclipboard_widget_disconnected.xml
android/src/main/res/values/: strings.xml
android/src/main/res/xml/: mpclipboard_widget_info.xml
clip/: Cargo.toml  README.md
clip/src/: clip.rs  error.rs  lib.rs  text_or_binary.rs
florisboard/: .gitignore  Dockerfile  Justfile  README.md  integrate-mpclipboard.patch
generic-client/: Cargo.toml  Justfile  README.md  bindings.h  cbindgen.toml  config.toml
generic-client/examples/: cli.rs  kqueue.c
generic-client/src/: config.rs  connectivity.rs  context.rs  event_loop.rs  ffi.rs  lib.rs  logger.rs  mpclipboard.rs  output.rs  timer.rs  tls.rs
generic-client/src/event_loop/: mid_handshake.rs  mod.rs  owned_fd.rs  websocket.rs
generic-client/src/state/: connected.rs  connecting.rs  disconnected.rs  established.rs  establishing.rs  handshaking.rs  mod.rs  ready.rs
kqueue-cli/: Justfile  README.md  config.toml  kqueue.c
linux/: Cargo.toml  Justfile  README.md  config.toml
linux/assets/: green.argb32  red.argb32  yellow.argb32
linux/debian/: mpclipboard-client.service
linux/src/: main.rs  main_loop.rs  mpclipboard.rs
linux/src/clipboard/: local_reader.rs
linux/src/tray/: buffer.rs  mod.rs  state.rs
macos/: .gitignore  Justfile  README.md  config.toml
macos/mpclipboard/: AppDelegate.swift  BridgingHeader.h  Clipboard.swift  Tray.swift
macos/mpclipboard.xcodeproj/: project.pbxproj
macos/mpclipboard/Assets.xcassets/AppIcon.appiconset/: Contents.json
macos/mpclipboard/Assets.xcassets/green.imageset/: Contents.json
macos/mpclipboard/Assets.xcassets/red.imageset/: Contents.json
macos/mpclipboard/Assets.xcassets/yellow.imageset/: Contents.json
macos/mpclipboard/ffi/: Connectivity.swift  FdWatcher.swift  MPClipboard.swift  Output.swift  PushResult.swift
mpclipboard-android/: .gitignore  Justfile  build.gradle.kts  settings.gradle.kts
mpclipboard-android/cli/: build.gradle.kts
mpclipboard-android/cli/src/main/: AndroidManifest.xml
mpclipboard-android/src/main/: AndroidManifest.xml
mpclipboard-android/src/main/cpp/: CMakeLists.txt  mpclipboard_android_jni.c
mpclipboard-android/src/main/kotlin/dev/mpclipboard/android/: Connectivity.kt  Ffi.kt  MPClipboard.kt  MPClipboardConnectionManager.kt  MPClipboardStore.kt  Output.kt
mpclipboard-android/src/main/kotlin/dev/mpclipboard/android/ui/: MPClipboardSettingsScreen.kt
mpclipboard-android/src/main/kotlin/dev/mpclipboard/android/widget/: MPClipboardWidgetProvider.kt
mpclipboard-android/src/main/res/drawable/: mpclipboard_widget_connected.xml
mpclipboard-android/src/main/res/layout/: mpclipboard_widget.xml
mpclipboard-android/src/main/res/values/: strings.xml
poll-cli/: .gitignore  Justfile  README.md  config.toml  poll-cli.c
rustls-platform-verifier/: .gitignore  Justfile
rustls-platform-verifier-android/: build.sh
rustls-platform-verifier/patches/: prefer-crls-on-android.patch
server/: Cargo.toml  Dockerfile  Justfile  README.md  config.toml
server/src/: auth.rs  clip.rs  main.rs  state.rs  store.rs
server/src/client/: mod.rs  rx.rs  tx.rs
src/: clip.rs  config.rs  main.rs  state.rs  store.rs
src/client/: rx.rs  tx.rs
