[package]
name = "mpclipboard-server"
version = "0.1.0"
edition = "2024"
authors = ["Ilya Bylich"]
license = "MIT"

[dependencies]
anyhow = "1"
tokio = { version = "1", features = ["net", "macros", "rt", "fs", "time"] }
serde = { version = "1", features = ["derive"] }
futures-util = { version = "0.3", features = ["sink"] }
log = { version = "0.4" }
toml = "1.1"
tokio-tungstenite = "0.29"
env_logger = { version = "0.11" }
bytes = "1.11"

[package.metadata.deb]
assets = [
    [
        "target/release/mpclipboard-server",
        "usr/bin/mpclipboard-server",
        "755",
    ],
    [
        "debian/mpclipboard-server.service",
        "lib/systemd/system/mpclipboard-server.service",
        "644",
    ],
]
